<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/list_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/fragment_register_name"/>


    <TextView
        android:id="@+id/list_item_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_register_email"/>

    <TextView
        android:id="@+id/list_item_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_register_password"/>



</LinearLayout>