<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="testeuds.maria.com.br.testeuds.fragment.RegisterFragment">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">

       <ImageView
           android:background="@drawable/ic_logo"
           android:layout_width="100dp"
           android:layout_height="100dp"
           android:layout_marginTop="20dp"
           android:layout_gravity="center"/>

       <EditText
           android:id="@+id/register_name"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:padding="10dp"
           android:layout_marginTop="10dp"
           android:layout_marginRight="30dp"
           android:layout_marginLeft="30dp"
           android:layout_marginBottom="5dp"
           android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
           android:hint="@string/fragment_register_name"/>


       <EditText
           android:id="@+id/register_email"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:padding="10dp"
           android:layout_marginTop="5dp"
           android:layout_marginRight="30dp"
           android:layout_marginLeft="30dp"
           android:layout_marginBottom="5dp"
           android:drawableLeft="@drawable/ic_email_black_24dp"
           android:hint="@string/fragment_register_email"/>

       <EditText
           android:id="@+id/register_password"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:padding="10dp"
           android:layout_marginTop="5dp"
           android:layout_marginRight="30dp"
           android:layout_marginLeft="30dp"
           android:layout_marginBottom="5dp"
           android:inputType="numberPassword"
           android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
           android:hint="@string/fragment_register_password"/>


       <EditText
           android:id="@+id/register_password1"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:padding="10dp"
           android:layout_marginTop="5dp"
           android:layout_marginRight="30dp"
           android:layout_marginLeft="30dp"
           android:layout_marginBottom="5dp"
           android:inputType="numberPassword"
           android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
           android:hint="@string/fragment_register_password1"/>

       <Button
           android:id="@+id/register_bt_register"
           android:layout_width="wrap_content"
           android:padding="16dp"
           android:layout_height="60dp"
           android:layout_gravity="center"
           android:layout_marginTop="12dp"
           android:textColor="#fff"
           android:background="#497ec9"
           android:text="@string/fragment_register_bt_register"
           android:textSize="24dp"/>

   </LinearLayout>
</FrameLayout>
