<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="testeuds.maria.com.br.testeuds.fragment.LoginFragment">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">

       <ImageView
           android:layout_width="100dp"
           android:layout_height="100dp"
           android:background="@drawable/ic_logo"
           android:layout_marginTop="40dp"
           android:layout_gravity="center"/>

       <EditText
           android:id="@+id/login_email"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:padding="16dp"
           android:layout_marginTop="60dp"
           android:layout_marginLeft="16dp"
           android:layout_marginRight="16dp"
           android:drawableLeft="@drawable/ic_email_black_24dp"
           android:hint="@string/fragment_register_email"/>

       <EditText
           android:id="@+id/login_password"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:padding="16dp"
           android:inputType="numberPassword"
           android:layout_margin="16dp"
           android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
           android:hint="@string/fragment_register_password"/>

       <Button
           android:id="@+id/login_bt_login"
           android:layout_width="wrap_content"
           android:padding="16dp"
           android:layout_height="60dp"
           android:layout_gravity="center"
           android:layout_marginTop="16dp"
           android:textColor="#fff"
           android:background="#497ec9"
           android:text="@string/fragment_bt_login"
           android:textSize="24dp"/>

   </LinearLayout>

</FrameLayout>
